Adding validations
