# src/controllers/Language.ts
@@ -6,12 +6,16 @@ import { LanguageToSend } from "../services/db/dto/Language/LanguageToSend";
 import { CreateLanguageMessage } from "../services/db/dto/Language/CreateLanguageMessage";
 import { ListQuery } from "../dto/queries/ListQuery";
 import logger from "../services/logging/logger";
+import { validateOrReject, ValidationError } from "class-validator";
+import { UnprocessableContentErrorMessage } from "../dto/errors/UnprocessableContentErrorMessage";
 
 export const listLanguages = async (req: Request, res: Response): Promise<void> => {
     try {
-        // validate user's data if necesary
+        // receive user data
         logger.info("Entering in listLanguages controller with params", {params: req.params, query: req.query});
         const query = plainToInstance(ListQuery, req.query, {excludeExtraneousValues: true, enableImplicitConversion: true});
+        // validate user's data if necesary
+        
         // handle user request
         const languages = await getAllLanguages(query);
         logger.verbose("List of languages obtained in listLanguages controller", languages);
@@ -32,7 +36,14 @@ export const addLanguage = async (req: Request, res: Response): Promise<void> =>
         logger.info("Entering in controller addLanguage controller with params ", {body: req.body, params: req.params, query: req.query});
         const newLanguage = plainToInstance(CreateLanguageMessage, req.body, {excludeExtraneousValues: true});
         // validate user's data if necesary
-        
+        try{
+            await validateOrReject(newLanguage)
+        } catch(err){
+            const errors  = err as ValidationError[];
+            logger.info("Some fields failed validations", errors);
+            res.status(422).send(new UnprocessableContentErrorMessage(errors));
+            return;
+        }
         // handle user request
         const language = await createLanguage(newLanguage);
         logger.verbose("Language created in addLanguage controller", language);
@@ -41,7 +52,7 @@ export const addLanguage = async (req: Request, res: Response): Promise<void> =>
         logger.verbose("Sending response in addLanguage controller", languageToSend);
         res.status(201).json(languageToSend);
     } catch(err) {
-        logger.error('Internal error in listLanguages Controller.', err);
+        logger.error('Internal error in addLanguage controller.', err);
         // check error type (optional) and return a message
         res.status(500).json(new InternalServerErrorMessage());
     }
